# Autonomous_Movement_BsCV_Project

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
launch/: auto_movement_bscv.launch
src/: lidarandmove.cpp
